--- a/.github/workflows/continuous-integration.yaml
+++ b/.github/workflows/continuous-integration.yaml
@@ -14,5 +14,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Setup .NET 9.0
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '9.0.x'
+
+      - name: Restore dependencies
+        run: dotnet restore
+
       - name: Check formatting
         run: dotnet format --verify-no-changes CiDemo.sln
